All autocplete data in quotes for clarity

--- a/index.html
+++ b/index.html
@@ -365,20 +365,20 @@
       const auto = document.querySelector(".autocomplete");
       M.Autocomplete.init(auto, {
         data: {
-          Alkmaar: null,
-          Amsterdam: null,
+          "Alkmaar": null,
+          "Amsterdam": null,
           "Den Bosch": null,
-          Colombia: null,
+          "Colombia": null,
           "New York": null,
-          Santorini: null,
-          Morocco: null,
-          Norway: null,
+          "Santorini": null,
+          "Morocco": null,
+          "Norway": null,
           "Sout Africa": null,
-          Fiji: null,
-          Poland: null,
-          Russia: null,
-          Paris: null,
-          Greece: null
+          "Fiji": null,
+          "Poland": null,
+          "Russia": null,
+          "Paris": null,
+          "Greece": null
         }
       });
 
